clean the code and document APIS and add exceptions